# pinocchio

./: Cargo.toml
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
integration_tests/: Cargo.toml
program/: Cargo.toml
program/src/: entrypoint.rs
program/src/processor/: craps_instruction.rs  dispatch_instruction.rs  mod.rs
