[package]
name = "myproject-client"
description = "Generated client for myproject"
version = { workspace = true }
edition = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
fetch = ["dep:solana-sdk"]
anchor = []
anchor-idl-build = []

[lints]
workspace = true

[dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }
serde = { version = "1.0", optional = true }
solana-sdk = { workspace = true, optional = true }
